tuition waivers initial commit, fees edits

--- a/website/chra/fees-2020-new-part3.html
+++ b/website/chra/fees-2020-new-part3.html
@@ -3,7 +3,7 @@
 <ul class="lista_con_pallini margin_bottom_20">
 <li>Summer School registrations will not be confirmed until registration is complete and billing information is received in full</li>
 <li>Cancellations received <strong>before 31 July 2020</strong> will be fully reimbursed minus <strong>50,00 €</strong> of administrative fees</li>
-<li>Cancellations received <strong>after 1 August 2020</strong> will be charged <strong>50%</strong> of the total fee. An option available will be the possibility to transfer the fee to another Venice based programme or 2021 edition of CHRA (fees may have to be compensated if not similar)</li>
+<li>Cancellations received <strong>after 1 August 2020</strong> will be charged 50% of the total fee. Alternatively, the enrollment can be transferred to another Venice based programme or to the 2021 edition of CHRA (fees may have to be compensated if not similar)</li>
 <!--<li>Cancellations <strong>after 30 April 2020</strong> will be charged <strong>100%</strong> of the total fee.</li>-->
 </ul>
 <p class="margin_bottom_20"><strong>Cancellation by Global Campus of Human Rights:</strong></p>
