original vision (reccommit)

--- a/website/about-us/vision/vision.html
+++ b/website/about-us/vision/vision.html
@@ -1,6 +1,7 @@
-<p class="subtitle_page_programme"> “A world in which human dignity, freedom, democracy, equality, the rule of law and respect of human rights, as shared values of the EU and UN and as internationally binding legal standards, are fully realized”	</p>
-<p class="margin_bottom_20">These values are fundamental for all human beings and essential to the sustainable development of all nations. The Global Campus recognizes them as interdependent and indivisible.</p>
-<p class="margin_bottom_20">Human dignity stands first as an all-encompassing principle. Under the Charter of the United Nations (1945) and the Universal Declaration of Human Rights (1948), "the recognition of the inherent dignity and of the equal and inalienable rights of all members of the human family is the foundation of freedom, justice and peace in the world".</p>
+<p class="subtitle_page_programme">Dignity, Freedom, Democracy, Equality, Rule of Law, Respect of Human Rights.</p>
+<p class="margin_bottom_20">EIUC and the Global Campus have joined forces to elaborate a shared vision (and mission) which shall guide the organisation until 2020 and beyond. A living document and source of inspiration for the whole network</p>
+<p class="margin_bottom_20">The shared vision the European Inter-University Centre for Human Rights and Democratisation / Global Campus of Human Rights is:</p>
+<p class="margin_bottom_20"><em>“a world in which human dignity, freedom, democracy, equality, the rule of law and respect of human rights, as shared values of the EU and UN and as internationally binding legal standards, are fully realized”</em></p>
 <p class="margin_bottom_20"><strong>Values (first!)</strong></p>
 <p class="margin_bottom_20">Human dignity, freedom, democracy, equality, the rule of law, and respect of human rights are fundamental values for all human beings and societies, and essential to the sustainable development of all nations.</p>
 <p class="margin_bottom_20">Our vision recognizes them as equally essential and interconnected. They are the principles which constitute the foundation of human rights, which are in turn interdependent and indivisible.</p>
