fixed Felipe Gomez surname

--- a/website/about-us/governance/governance-part3.html
+++ b/website/about-us/governance/governance-part3.html
@@ -3,7 +3,7 @@
 <ul class="lista_con_pallini margin_bottom_20">
 	<li>Veronica Gomez, University of San Martin (Buenos Aires), GC President and representative of GC Latin America and Caribbean </li>
 	<li>Elina Pirjatanniemi, Abo Akademi University (Turku), 1st Vice President </li>
-	<li>Felipe Gomez, University of Deusto (Bilbao), Vice President</li>
+	<li>Felipe Gomez Isa, University of Deusto (Bilbao), Vice President</li>
 	<li>Frans Viljoen, University of Pretoria, Vice President and representative of GC Africa</li>
 	<li>Thérèse Murphy, Queen's University Belfast, representative of GC Europe</li>
 	<li>Marco Borraccetti, University of Bologna, representative of GC South East Europe</li>
