first draft partners

--- a/website/about-us/partners/partners-part3.html
+++ b/website/about-us/partners/partners-part3.html
@@ -1,4 +1,4 @@
-<p class="margin_bottom_20">EIUC is further enriched by the input given by representatives of <strong>non-governmental organisations</strong> that are member of the Advisory Board.</p>
+<p class="margin_bottom_20">The Global Campus of Human Rights is further enriched by the input given by representatives of <strong>non-governmental organisations</strong> that are member of the Advisory Board.</p>
 <p class="margin_bottom_20">[nbsp]</p>
 <div class="table_partners no_margin_bottom">
 <div class="table_partners_cell">
