--- a/website/about-us/partners/partners-part2.html
+++ b/website/about-us/partners/partners-part2.html
@@ -75,7 +75,9 @@
         <div class="container_logo_partner"><a href="http://www.auschwitzinstitute.org/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/cpv-partners.jpg" alt="logo Camera Penale Veneziana “Antonio Pognici”"></a></div>
         <p>Camera Penale Veneziana “Antonio Pognici”</p>
     </div>
-    
-    <div class="table_partners_cell table_partners_cell_vuota space">[nbsp]</div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://www.europarl.europa.eu/portal/en" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/eu-par-partners.jpg" alt="logo European Parliament"></a></div>
+        <p>European Parliament</p>
+    </div>
     <div class="table_partners_cell table_partners_cell_vuota space">[nbsp]</div>
 </div>
