small fixes to alumni

--- a/website/about-us/alumni/alumni-part1.html
+++ b/website/about-us/alumni/alumni-part1.html
@@ -2,7 +2,7 @@
 <p class="margin_bottom_20">The graduates of our seven regional programmes become human rights experts active in all corners of the planet. </p>
 <p class="margin_bottom_20">They hold the positions of Attorney-General; Minister of Gender, Children and Social Protection; Vice-Minister of Justice for Indigenous Peoples; High Court Judge; Chief Justice; University Dean; Vice-Rector; Chairperson of the UN Committee of the Rights of the Child; Judge at the European Court of Human Rights; Deputy Secretary to the African Commission on Human and Peoples’ Rights; and Member of the African Commission on Human and Peoples’ Rights. Other Global Campus alumni serve as high ranking diplomats; members and officials of national human rights institutions; officials in UN agencies; legal advisors to national and international institutions; senior journalists; and leaders of civil society organisations, community-based initiatives and education institutions.</p>
 <p class="margin_bottom_20">Our graduates can be found in the main “human rights capitals” of the world as well as in remote areas reached by field missions and development cooperation projects. They are crucial human resources at a time when our world is increasingly confronted with crises and challenges to human rights.</p>
-
+<p>&nbsp;</p>
 <div class="recensione_alunno">
     <div class="img_alunno_alumni">&nbsp;</div>
     <div class="text_recensione_alunno">
