locations first release/draft

--- a/website/about-us/locations/locations-part2.html
+++ b/website/about-us/locations/locations-part2.html
@@ -32,8 +32,8 @@
             <div class="logo_e_x">
                 <img src="files/eiuc/x.svg" alt="bottone chiusura" class="chiudi no_margin_bottom">
             </div>
-            <p class="margin_bottom_15">GC Europe</p>
-            <p class="text_popup margin_bottom_20 titolo_gc_europe">EIUC - European Inter-University Centre for Human Rights and Democratisation</p>
+            <p class="margin_bottom_15">GC Headquarters</p>
+            <p class="text_popup margin_bottom_20 titolo_gc_europe">GC Europe</p>
             <p class="text_popup margin_bottom_15">Venice, Italy</p>
             <div class="freccia_dx freccia_dx_pop_up">
                 <a href="{{link_url::157}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
