--- a/website/about-us/locations/locations-part1.html
+++ b/website/about-us/locations/locations-part1.html
@@ -1,2 +1,3 @@
-<p>The Global Campus Master’s Programmes and the other regional activities organised by each network’s partner are delivered, primarily, in the cities and venues where the 7 coordinating universities and institutions are based, but not only...</p>
-<p>To set for this human rights tour around the five continents start in Venice for Europe, in Yerevan for the Caucasus, in Pretoria for Africa, in Sarajevo and Bologna for South-East Europe, in Buenos Aires for Latin America and the Caribbean, in Beirut for the Arab World, and in Bangkok for the Asia-Pacific region..</p>
+<p>The Global Campus master’s programmes and the other activities organised by our regional hubs are primarily delivered in the cities where our seven coordinating universities are based: Venice, Sarajevo and</p>
+<p>Bologna, Pretoria, Bangkok, Yerevan, Buenos Aires and Beirut. Our regional hubs cover Europe and South East Europe, Africa, Asia-Pacific, the Caucasus,Latin America and the Caribbean and the Arab world.
+</p>
