locations -> Europe -> First Draft

--- a/website/about-us/locations/europe/europe-part1.html
+++ b/website/about-us/locations/europe/europe-part1.html
@@ -1,19 +1,16 @@
 <p class="subtitle_page_programme">Europe</p>
-<p class="margin_bottom_20">The seat of EIUC / GC Europe is the Monastery of Saint Nicolò, located in the Venetian island of Lido, and is part of the monumental complex of the church of Saint Nicolò. As testified by the remaining fragments of byzantine mosaics, the entire structure (both the church and the monastery) were built in the XI century, however the edification of the Monastery in its actual shape is placed in 1530 by the Benedictine monks.</p>
-<p class="margin_bottom_20">The monks took care of the Monastery until the dissolution of their order in 1770, when the management of the Monastery was entrusted to the Franciscan friars who used the facility to develop an educational centre. When in 1997 the friars left the Monastery the Municipality of Venice decided to grant its use to the University of Padua, at the time coordinating the European Master’s Programme in Human Rights and Democratisation, and as of 2002 to the European Inter-University Centre for Human Rights and Democratisation EIUC/Global Campus which continued to carry on the network’s core educational, training and promotional activities in the ancient premises.</p>
-<p class="margin_bottom_20">The monastery architecture develops around a graceful central cloister (1530) including at its centre a fine well-head (vera da pozzo) with curved wrought-iron top dated 1710. In the same space ancient and modern art create a harmonious mix. In 2017 EIUC was donated the installation “Collective Memory” by the Belgian artist Koen Vanmechelen. The installation consists of a Carrara marble statue inspired by an ancient Greek model of a child sitting on the Encyclopaedia of Human Rights staring pensively in front of him. It represents human rights as the foundation of civilisations, and communicates the message that every new-born has the right to a life worth living with respect for human rights.</p>
-<p class="margin_bottom_20">The Monastery of San Nicolò has proven to be an ideal location for EIUC/Global Campus and today features a broad range of rooms and facilities which contribute to maximizing the many activities organised.</p>
-<p class="margin_bottom_20">The rooms on the ground floor – in addition to staff offices - include:</p>
+<p class="margin_bottom_20">The Headquarters of the Global Campus and of GC Europe/the EMA Programme are located in the Monastery of San Nicolò, on the Venetian island of Lido next to the Church of San Nicolò. As testified by fragments of byzantine mosaics, the complex was built in the XI century, although the current layout of the Monastery was built by Benedictine monks in 1530.</p>
+<p class="margin_bottom_20">The monks took care of the Monastery until the dissolution of their order in 1770. The management of the Monastery was then entrusted to Franciscan friars who used the facility as an educational centre until they left in 1997. At that point the Municipality of Venice entrusted it to the University of Padua, then coordinator of the European Master’s Programme in Human Rights and Democratisation. In 2002 the EIUC (European Inter-University Centre for Human Rights and Democratisation) assumed responsibility, and since 2019 the Global Campus of Human Rights. We continue to carry out the core educational, training and outreach activities in these ancient premises.</p>
+<p class="margin_bottom_20">The Monastery is built around a charming central cloister (1530) that hosts a fine well-head (vera da pozzo) with curved wrought-iron top dated 1710. The same ancient space was joined by modern art in 2017, when the Belgian artist Koen Vanmechelen donated the installation “Collective Memory”. Made of Carrara marble, “Collective Memory” depicts a pensive child, inspired by an ancient Greek model, sitting on the Encyclopaedia of Human Rights. It represents human rights as the foundation of civilizations, and in the words of the artist, communicates the message that “every new-born has the right to a life worth living with respect for human rights”.</p>
+<p class="margin_bottom_20">The Monastery of San Nicolò features a broad range of rooms and facilities which accommodate our varied activities.</p>
+<!-- <p class="margin_bottom_20">The rooms on the ground floor – in addition to staff offices - include:</p> -->
 <ul class="lista_con_pallini margin_bottom_20">
-    <li>the “Antonio Papisca Hall” where E.MA students follow most of their classes and present working group results in plenary sessions;</li>
-    <li>the specialised multi-disciplinary human rights “Library” with its “Reading Room”;</li>
-    <li>the “Mahatma[nbsp]Gandhi” and the “Eleanor Roosevelt Rooms” which can host seminars and meetings, workshops, group activities, and extra-curricular events.</li>
+    <li>The Antonio Papisca Hall where EMA students attend most of their classes and present working group results in plenary sessions</li>
+	<li>The specialised multi-disciplinary human rights library and reading room</li>
+	<li>The Mahatma Gandhi Room and the Eleanor Roosevelt Room which host seminars, meetings, workshops, group activities and extra-curricular events</li>
+	<li>The Madres de Plaza de Mayo Room, a particularly attractive venue especially designed for meetings</li>
+	<li>The Anna Politkovskaja Room with its ancient chimney</li>
+	<li>The soundproofed Nelson Mandela Room which hosts meetings, classes and training seminars</li>
 </ul>
-<p class="margin_bottom_20">On the first floor there are other offices and three didactic/seminar rooms:</p>
-<ul class="lista_con_pallini margin_bottom_20">
-    <li>the “Madres de Plaza de Mayo Room” is a particularly attractive venue especially designed for meetings;</li>
-    <li>the “Anna Politkovskaja Room”, which is characterized by an ancient chimney</li>
-    <li>the totally soundproof “Nelson Mandela Room” both used to host meetings, classes and training seminars.</li>
-</ul>
-<p class="margin_bottom_20">For more information on the premises spaces and activities they can host, please contact <a class="titolo_gc_europe" href="mailto:premises@eiuc.org">premises@eiuc.org</a></p>
-<p><a class="titolo_gc_europe" href="{{link_url::158}}">Practical Information</a></p>
+<p class="margin_bottom_20">For more information on the premises spaces and activities they can host, please contact <a class="titolo_gc_europe" href="mailto:premises@gchumanrights.org">premises@gchumanrights.org</a></p>
+<p>Discover <a class="titolo_gc_europe" href="{{link_url::158}}">How to Reach Us</a>!</p>
