minor fixes in Universities

--- a/website/about-us/universities/university-part1.html
+++ b/website/about-us/universities/university-part1.html
@@ -1,2 +1,2 @@
-<p class="subtitle_page_programme">100 Universities, 7 regional programmes: the largest university network in the world</p>
+<p class="subtitle_page_programme">100 Universities, 7 regional programmes: the largest network of human rights educators in the world</p>
 <p>Our one hundred member universities are renowned for their leading role in education, research and advocacy in human rights and democratisation. Such a wide network, cooperating at both the regional and the global level, ensures that intersectionality and cross-cutting issues are always at the forefront of our programmes.</p>
