megamenu - proper comments

--- a/website/megamenu.html
+++ b/website/megamenu.html
@@ -1,4 +1,4 @@
-megamenu -->
+<!-- megamenu -->
 <ul class="digimeg-sub-nav">
     <!--<li id="Admissions-subnav">
 				
@@ -565,3 +565,4 @@ megamenu -->
     </div>
 </li>
 </ul>
+<!-- megamenu end -->
