menumobile - first draft

--- a/website/menumobile.html
+++ b/website/menumobile.html
@@ -1,4 +1,4 @@
-<!-- Push Wrapper -->
+Push Wrapper -->
 <div class="mp-pusher" id="mp-pusher">
     <!-- mp-menu -->
     <nav id="mp-menu" class="mp-menu">
@@ -91,7 +91,7 @@
                                     <h2>Career Development</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
-                                        <li><a href="{{link_url::164}}">GC Intership Programme</a></li>
+                                        <li><a href="{{link_url::164}}">Global Intership Programme</a></li>
                                         <li><a href="{{link_url::238}}">Alumni associations’ activities</a></li>
                                     </ul>
                                 </div>
@@ -115,13 +115,14 @@
                                 <a class="next_level" href="#">
                                     <img src="files/eiuc/freccia-dx.svg" alt="freccia destra">
                                 </a>
-                                <a class="order1" href="{{link_url::13}}">Summer Schools and Training Programmes</a>
+                                <a class="order1" href="{{link_url::13}}">Focused Training & Capacity Buildings</a>
                                 <div class="mp-level">
                                     <h2>Summer Schools and Training Seminars</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
                                         <li><a href="{{link_url::48}}">Summer Schools</a></li>
                                         <li><a href="{{link_url::49}}">Training Seminars</a></li>
+                                        <li><a href="{{link_url::478}}">Human Rights Centre<br>at the UNTL</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -168,12 +169,12 @@
                                     <h2>Projects</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
-                                        <li><a href="{{link_url::187}}">GC Research Programme</a></li>
+                                        <li><a href="{{link_url::187}}">Research Programme</a></li>
                                         <li><a href="{{link_url::188}}">Policy Observatory Pilot Project</a></li>
                                         <li><a href="{{link_url::189}}">UN Global Study</a></li>
                                         <li><a href="{{link_url::190}}">FRAME</a></li>
                                         <li><a href="{{link_url::191}}">ACTIONES</a></li>
-                                        <li><a href="{{link_url::333}}">GC Visiting Researchers</a></li>
+                                        <li><a href="{{link_url::333}}">Visiting Researchers</a></li>
                                         <li><a href="{{link_url::340}}">e-NACT</a></li>
                                         <!-- <li><a href="#">UN Treaty Body Reform</a></li> -->
                                     </ul>
@@ -189,7 +190,7 @@
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
                                         <li><a href="{{link_url::16}}">Global Campus Human Rights Journal</a></li>
-                                        <li><a href="{{link_url::16}}">Global Campus Master's Theses</a></li>
+                                        <li><a href="{{link_url::16}}">Master's Theses</a></li>
                                         <li><a href="{{link_url::16}}">FRAME Reports</a></li>
                                         <li><a href="{{link_url::16}}">European Human Rights Yearbook</a></li>
                                         <li><a href="{{link_url::16}}">Repository</a></li>
@@ -233,13 +234,13 @@
                                     <h2>Networking and Outreach</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
-                                        <li><a href="{{link_url::168}}">Global Campus Exchange of Professors</a></li>
+                                        <li><a href="{{link_url::168}}">Exchange of Professors</a></li>
                                         <li><a href="{{link_url::169}}">Workshop Integrated Teaching</a></li>
                                         <li><a href="{{link_url::170}}">Online thesis supervision</a></li>
                                         <li><a href="{{link_url::171}}">Global Classroom</a></li>
                                         <li><a href="{{link_url::172}}">International Conference on Human Rights and Democratisation</a></li>
                                         <li><a href="{{link_url::173}}">Nelson Mandela World Moot Court</a></li>
-                                        <li><a href="{{link_url::50}}">Venice Academy of Human Rights</a></li>
+                                        <!-- <li><a href="{{link_url::50}}">Venice Academy of Human Rights</a></li> -->
                                         <!-- <li><a href="#">Global Campus Visiting Researchers</a></li> -->
                                     </ul>
                                 </div>
@@ -362,9 +363,9 @@
                                 <a class="next_level" href="#">
                                     <img src="files/eiuc/freccia-dx.svg" alt="freccia destra">
                                 </a>
-                                <a class="order1" href="{{link_url::26}}">EIUC / Global Campus</a>
+                                <a class="order1" href="{{link_url::26}}">Global Campus of Human Rights</a>
                                 <div class="mp-level">
-                                    <h2>EIUC / Global Campus</h2>
+                                    <h2>Global Campus of Human Rights</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
                                         <li><a href="{{link_url::192}}">Universities</a></li>
@@ -382,9 +383,9 @@
                                 <a class="next_level" href="#">
                                     <img src="files/eiuc/freccia-dx.svg" alt="freccia destra">
                                 </a>
-                                <a class="order1" href="{{link_url::27}}">Venues</a>
+                                <a class="order1" href="{{link_url::27}}">Locations</a>
                                 <div class="mp-level">
-                                    <h2>Venues</h2>
+                                    <h2>Locations</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
                                         <li><a href="{{link_url::157}}">Europe</a></li>
@@ -406,7 +407,7 @@
                                     <h2>Staff</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
-                                        <li><a href="{{link_url::292}}">EIUC</a></li>
+                                        <li><a href="{{link_url::292}}">Headquarters</a></li>
                                         <li><a href="{{link_url::213}}">Europe</a></li>
                                         <li><a href="{{link_url::214}}">South East Europe</a></li>
                                         <li><a href="{{link_url::219}}">Africa</a></li>
@@ -426,18 +427,15 @@
                                     <h2>Documents of Reference</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
-                                        <li><a href="{{link_url::29}}">Global Campus MoU</a></li>
-                                        <li><a href="{{link_url::29}}">EIUC Statute</a></li>
-                                        <li><a href="{{link_url::29}}">EIUC / GC Vision</a></li>
-                                        <li><a href="{{link_url::29}}">EIUC / GC Mission</a></li>
-                                        <li><a href="{{link_url::29}}">Organisation, Management, and Auditing Model pursuant to Legislative Decree 231/2001</a></li>
-                                        <li><a href="{{link_url::29}}">Code of Ethics</a></li>
-                                        <li><a href="{{link_url::29}}">Comunicazione ai sensi Art. 1 Commi 125 - 129 Legge 04.08.17 N.124</a></li>
-                                        <li><a href="{{link_url::29}}">MoU EIUC - City of Venice</a></li>
-                                        <li><a href="{{link_url::29}}">EMA Venice Charter</a></li>
-                                        <li><a href="{{link_url::29}}">EMA Joint Degree Agreement</a></li>
-                                        <!--<li><a href="{{link_url::29}}">PARTNERS DoR</a></li>-->
-                                        <li><a href="{{link_url::334}}">EIUC / GC Brochure</a></li>
+                                        <li><a href="{{link_url::29}}">Mission and Vision</a></li>
+						                <li><a href="{{link_url::29}}">Statute</a></li>
+						                <li><a href="{{link_url::334}}">Brochure</a></li>
+						                <li><a href="{{link_url::29}}">EMA Venice Charter</a></li>
+						                <li><a href="{{link_url::29}}">EMA Joint Degree Agreement</a></li>
+						                <li><a href="{{link_url::29}}">Organisation, Management, and Auditing Model pursuant to Legislative Decree 231/2001</a></li>
+						                <li><a href="{{link_url::29}}">Code of Ethics</a></li>
+						                <li><a href="{{link_url::29}}">Comunicazione ai sensi Art. 1 Commi 125 - 129 Legge 04.08.17 N.124</a></li>
+						                <li><a href="{{link_url::29}}">MoU EIUC - City of Venice</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -537,4 +535,4 @@
     </nav>
     <!-- /mp-menu -->
 </div><!-- /pusher -->
-<!-- fine menu mobile -->
+<!-- fine menu mobile
