general megamenu and menumobile fixes

--- a/website/menumobile.html
+++ b/website/menumobile.html
@@ -1,4 +1,4 @@
-Push Wrapper -->
+<!-- Push Wrapper -->
 <div class="mp-pusher" id="mp-pusher">
     <!-- mp-menu -->
     <nav id="mp-menu" class="mp-menu">
@@ -91,7 +91,7 @@ Push Wrapper -->
                                     <h2>Career Development</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
                                     <ul>
-                                        <li><a href="{{link_url::164}}">Global Intership Programme</a></li>
+                                        <li><a href="{{link_url::164}}">Global Internship Programme</a></li>
                                         <li><a href="{{link_url::238}}">Alumni associations’ activities</a></li>
                                     </ul>
                                 </div>
@@ -535,4 +535,4 @@ Push Wrapper -->
     </nav>
     <!-- /mp-menu -->
 </div><!-- /pusher -->
-<!-- fine menu mobile
+<!-- fine menu mobile -->
