--- a/website/megamenu.html
+++ b/website/megamenu.html
@@ -76,7 +76,7 @@
                 <h5 class="title_colonna_menu"><a href="{{link_url::11}}">Career Development</a></h5>
                 <ul>
                     <li>
-                        <a href="{{link_url::164}}">Global Intership Programme</a>
+                        <a href="{{link_url::164}}">Global Internship Programme</a>
                     </li>
                     <li>
                         <a href="{{link_url::238}}">Alumni associations’<br>activities</a>
