international conference initial commit

--- a/website/03-Research/intl-conference/intl-conference.part1.html
+++ b/website/03-Research/intl-conference/intl-conference.part1.html
@@ -1,14 +1,2 @@
-<p class="margin_bottom_20">The Global Classroom brings together students and professors from all regional hubs for a week-long conference where a topic of common interest is studied, analysed and discussed. The discussion is enriched by the participation of experts, including representatives of States, UN Agencies, EU experts and civil society organisations.</p>
-<p class="margin_bottom_20">The Global Classroom  facilitates interaction among students from the different regional programmes by organising dedicated activities and providing a forum for discussion and networking.</p>
-<p class="margin_bottom_20">The opportunity to engage in research, to share findings with others and to engage in a conference-like setting is formative for students and stimulating for academics. Furthermore, the assigned research topics allows participants to explore characteristic challenges to human rights and democracy processes in their respective regions. Global Classroom research outputs are in most years published in the Global Campus Human Rights Journal.</p>
-<p class="margin_bottom_20">Global Classroom topics in past years included the following:</p>
-<ul class="lista_con_pallini margin_bottom_20">
-	<li>The  Millennium Development Goals (MDGs)  and their prospects in the post-2015 era (2013)</li>
-	<li>The Universal Periodic Review (UPR) (2014)</li>
-	<li>The impact on human rights of foreign debt and economic crises (2015)</li>
-	<li>Intractable human rights situations and failed international responses to crises (2016)</li>
-	<li>Securitisation and the Impact on Human Rights and Democracy: Human Security in time of Insecurity (2017)</li>
-	<li>The Influence of Diaspora on Democracy-Building Processes: Behavioural Diversity (2018)</li>
-	<li>New Technologies and Human Rights (2019)</li>
-	<li>The UN Global Study on Children Deprived of Liberty and the implementation of its recommendations (2020)</li>
-</ul>
+<p class="margin_bottom_20">Every year a regional master’s programme takes the lead in organising an international conference/promotional event to raise awareness of the Global Campus network and foster discussion on current challenges to human rights and democratisation.</p>
+<p>The objectives of this event are three-fold: to present the Global Campus activities to an audience of experts, academics and different stakeholders; to exchange research findings and thinking around human rights and democracy; and to engage in an interdisciplinary dialogue on process/actor-oriented, conceptual, and methodological issues in the context the different regions of the Global Campus.</p>
