--- a/website/03-Research/Projects/childrens-rights-part2.html
+++ b/website/03-Research/Projects/childrens-rights-part2.html
@@ -1,4 +1,5 @@
 <p class="subtitle_page_programme">Vision and Mission Statement</p>
-<div class="box_vertical_a4_container">
+<p class="margin_bottom_20">For more information read the Vision and Mission Statement of the cooperation.</p>
+<!-- <div class="box_vertical_a4_container">
     <iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1Axs4BGN3ywuYIrlHJ50K6O675CV5uqyN/preview"></iframe>
- </div>
+ </div> -->
